# KAGParser

./: CMakeLists.txt  KAGParser.cpp  KAGParser.h  Main.cpp  Makefile
.github/workflows/: ci-krkrsdl2.yml
src_list/: sources.txt
